# steply

./: .gitignore  ARCHITECTURE.md  CODE_REVIEW.md  Cargo.toml  FLOW_YAML_CONCEPT.md  PLAN.md  REFACTOR_AREAS_PLAN.md  RENDERING_ANALYSIS.md  STATUS_AND_PLAN.md  TODO.md  docs.json  fix_imports.py  future.md  migrate_data_node.py
crates/steply-cli/: Cargo.toml
crates/steply-cli/src/: cli.rs  flow.rs  main.rs  prompt.rs
crates/steply-core/: Cargo.toml
crates/steply-core/src/: host.rs  lib.rs  time.rs
crates/steply-core/src/config/: assemble.rs  binding_compile.rs  doc_model.rs  error.rs  mod.rs  model.rs  normalize.rs  parse.rs  spec.rs  utils.rs  validate.rs  widgets.rs
crates/steply-core/src/config/tests/: mod.rs  validate.rs
crates/steply-core/src/config/widgets/: common.rs  components.rs  embedded.rs  (+2 more)
crates/steply-core/src/core/: mod.rs  store_refs.rs  value.rs  value_path.rs
crates/steply-core/src/preview/: mod.rs  render.rs  request.rs  service.rs
crates/steply-core/src/runtime/: effect.rs  event.rs  key_bindings.rs  mod.rs  reducer.rs  scheduler.rs
crates/steply-core/src/state/: change.rs  demo.rs  flow.rs  mod.rs  overlay.rs  step.rs  store.rs
crates/steply-core/src/task/: execution.rs  inline.rs  mod.rs  run_state.rs  spec.rs  subscription.rs
crates/steply-core/src/terminal/: types.rs
crates/steply-core/src/ui/: inline.rs  layout.rs  mod.rs  render_view.rs  renderer.rs  style.rs
crates/steply-core/src/widgets/: mod.rs  node.rs  static_hints.rs  traits.rs  validators.rs
crates/steply-wasm/: Cargo.toml
crates/steply-wasm/src/: lib.rs
(+499 files in other folders)
