[package]
name = "steply-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "steply"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["string"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
steply-core = { path = "../steply-core" }
steply-runtime = { path = "../steply-runtime" }
