[package]
name = "steply-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
globset = "0.4.18"
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
similar = { version = "2.7.0", features = ["inline"] }
unicode-width = "0.2"
regex = "1"
schemars = { version = "0.8", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1"
